# factor-factory

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.claude/agents/: contract-auditor.md  engine-reviewer.md
.claude/commands/: add-engine.md  bump.md  contract-check.md  engine-status.md  release-check.md  release.md
.claude/skills/: engine-protocol.md  fixture-parity.md  piggyback-first.md  release-bump.md  tearsheet-json-contract.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  design-contracts.md  getting-started.md  index.md  jellycell-integration.md  references.bib  supported-domains.md
docs/_build/html/: .buildinfo  design-contracts.html  genindex.html  getting-started.html  index.html  jellycell-integration.html  llms-full.txt  llms.txt  objects.inv  py-modindex.html  search.html  searchindex.js  supported-domains.html
docs/apidocs/: index.rst
docs/apidocs/factor_factory/: factor_factory.diagnostics.assertions.md  factor_factory.diagnostics.balance.md  factor_factory.diagnostics.md  factor_factory.engines._base.md  factor_factory.engines.climate.md  factor_factory.engines.did.borusyak_jaravel_spiess.md  factor_factory.engines.did.md  factor_factory.engines.did.sun_abraham.md  factor_factory.engines.diffusion.md  factor_factory.engines.event_study.fama_french.md  factor_factory.engines.event_study.market_adjusted.md  factor_factory.engines.event_study.md  factor_factory.engines.het_te.bcf.md  factor_factory.engines.het_te.causal_forest.md  factor_factory.engines.het_te.md  factor_factory.engines.mediation.md  factor_factory.engines.panel_reg._base.md  factor_factory.engines.panel_reg.pyfixest_adapter.md  factor_factory.engines.rdd._base.md  factor_factory.engines.rdd.md  factor_factory.engines.reporting_bias.md  factor_factory.engines.scm._base.md  factor_factory.engines.scm.augmented.md  factor_factory.engines.scm.matrix_completion.md  factor_factory.engines.scm.md  factor_factory.engines.scm.pysyncon_adapter.md  factor_factory.engines.sdid.md  factor_factory.engines.spatial.md  factor_factory.engines.survival.cox_ph.md  factor_factory.engines.survival.kaplan_meier.md  factor_factory.engines.survival.md  factor_factory.factors.md  factor_factory.jellycell.notebooks._scaffold.md  factor_factory.jellycell.tearsheets.audit.md  factor_factory.jellycell.tearsheets.methodology.md  factor_factory.md  factor_factory.reporting.md  factor_factory.reporting.quarto.md  factor_factory.tidy.contracts.md  factor_factory.tidy.socrata.md
docs/cookbook/: did-twfe.md  event-study-market-adjusted.md  sdid.md  survival-cox.md
docs/development/: adding-an-engine.md  contributing.md
docs/migration/: v0-to-v1.md
docs/og_context/: 00_design_rationale.md  01_architecture.md  02_implementation_plan.md  04_downstream_changes.md  05_rfc_template.md  06_post_v0.1_roadmap.md  README.md
docs/og_context/03_specs/: diagnostics_contract.md  engine_protocol.md  jellycell_integration.md  panel_contract.md  tidy_contract.md
docs/reference/: contracts.md
factor_factory/: __init__.py  __main__.py
factor_factory/diagnostics/: __init__.py  assertions.py  balance.py  residuals.py  trends.py
factor_factory/engines/: __init__.py  _base.py  _registry.py
factor_factory/engines/changepoint/: __init__.py  _base.py  ruptures_adapter.py
factor_factory/engines/climate/: __init__.py
factor_factory/engines/did/: __init__.py  _base.py  borusyak_jaravel_spiess.py  callaway_santanna.py  sun_abraham.py  twfe.py
factor_factory/engines/diffusion/: __init__.py
factor_factory/engines/dml/: __init__.py  _base.py  plr.py
factor_factory/engines/event_study/: __init__.py  _base.py  fama_french.py  market_adjusted.py
factor_factory/engines/hawkes/: __init__.py
factor_factory/engines/het_te/: __init__.py  _base.py  bcf.py  causal_forest.py
factor_factory/engines/inequality/: __init__.py
factor_factory/engines/mediation/: __init__.py  _base.py  four_way.py
factor_factory/engines/panel_reg/: __init__.py  _base.py  pyfixest_adapter.py
factor_factory/engines/rdd/: __init__.py  _base.py  rd_robust.py
factor_factory/engines/reporting_bias/: __init__.py
factor_factory/engines/scm/: __init__.py  _base.py  augmented.py  matrix_completion.py  pysyncon_adapter.py
factor_factory/engines/sdid/: __init__.py  _base.py  arkhangelsky.py
factor_factory/engines/spatial/: __init__.py  _base.py  morans_i.py
factor_factory/engines/stl/: __init__.py  _base.py  sktime_stl.py
factor_factory/engines/survival/: __init__.py  _base.py  cox_ph.py  kaplan_meier.py
factor_factory/factors/: __init__.py
factor_factory/jellycell/: __init__.py  cells.py  figure.py
factor_factory/jellycell/_templates/: audit.md.j2  diagnostics_checklist.md.j2  findings.md.j2  manuscript.md.j2  methodology.md.j2
factor_factory/jellycell/notebooks/: __init__.py  _scaffold.py
factor_factory/jellycell/tearsheets/: __init__.py  _render.py  audit.py  diagnostics.py  findings.py  manuscript.py  methodology.py
factor_factory/reporting/: __init__.py  quarto.py
factor_factory/tests/: test_batch15.py  test_cross_domain.py  test_diagnostics.py  test_geography.py  test_jellycell_integration.py  test_panel_contract.py  test_polish.py  test_streaming.py  test_treatment_events.py
factor_factory/tests/_fixtures/: cross_domain.py  synthetic_panels.py
factor_factory/tests/benchmarks/: __init__.py  test_panel_benchmarks.py
factor_factory/tests/properties/: __init__.py  test_panel_properties.py
factor_factory/tests/test_engines/: test_batch10_imports.py  test_batch11_imports.py  test_batch12_imports.py  test_callaway_santanna.py  test_did_conformance.py  test_did_extensions.py  test_event_study.py  (+10 more)
factor_factory/tidy/: __init__.py  contracts.py  geography.py  panel.py  record_view.py  socrata.py  streaming.py
scripts/: extract_release_notes.py  preview_tearsheet.sh
(+348 files in other folders)
