[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "factor-factory"
dynamic = ["version"]
description = "Shared factor-model + analysis-pipeline framework with first-class jellycell integration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Blaise Albis-Burdige" },
]
keywords = ["panel-data", "did", "rdd", "scm", "econometrics", "jellycell", "tearsheet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

# Default install: tidy + diagnostics + jellycell. No engines.
dependencies = [
    "pandas>=2.2",
    "numpy>=2",
    "pydantic>=2",
    "pyarrow>=18",
    "jellycell[server]>=1.4.0,<2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "geopandas>=1.0",
    "shapely>=2.0",
    "jinja2>=3.1",
    "scipy>=1.13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Engine families — each pulls in its own canonical implementations.
did = ["linearmodels>=6.0", "differences>=0.2"]
rdd = ["rdrobust>=1.3"]
scm = ["pysyncon>=1.4"]
changepoint = ["ruptures>=1.1", "bayesloop>=1.5"]
stl = ["sktime>=0.30", "prophet>=1.1"]
panel-reg = ["linearmodels>=6.0", "pyfixest>=0.20"]
inequality = ["inequality>=1.0"]
spatial = ["esda>=2.5", "libpysal>=4.10", "spreg>=1.4"]
reporting-bias = []
hawkes = ["tick>=0.7"]
survival = ["lifelines>=0.27"]
event-study = []  # baseline implementation is dependency-free
het-te = ["econml>=0.15"]  # causal forests, X/T/S/R-learners
dml = ["DoubleML>=0.7"]  # cross-fit double ML
mediation = []  # statsmodels.stats.mediation is in default install transitively
climate = ["xclim>=0.50", "pymannkendall>=1.4"]
diffusion = ["ndlib>=5.1"]
# sdid — no mature Python implementation; flagged as "experimental"
# until cvxpy-backed homegrown adapter lands.

# Aggregator — installs every engine family currently shippable.
all = [
    "linearmodels>=6.0",
    "differences>=0.2",
    "rdrobust>=1.3",
    "pysyncon>=1.4",
    "ruptures>=1.1",
    "bayesloop>=1.5",
    "sktime>=0.30",
    "prophet>=1.1",
    "pyfixest>=0.20",
    "inequality>=1.0",
    "esda>=2.5",
    "libpysal>=4.10",
    "spreg>=1.4",
    "tick>=0.7",
    "lifelines>=0.27",
    "econml>=0.15",
    "DoubleML>=0.7",
    "xclim>=0.50",
    "pymannkendall>=1.4",
    "ndlib>=5.1",
]

# Docs toolchain — mirrors jellycell's Sphinx + furo + autodoc2 + llms-txt.
docs = [
    "sphinx>=7.3",
    "sphinx-autobuild>=2024.9",
    "sphinx-autodoc2>=0.5",
    "myst-parser>=3.0",
    "furo>=2024.8",
    "sphinx-design>=0.6",
    "sphinx-copybutton>=0.5",
    "sphinx-llms-txt>=0.5",
]

# Dev tooling — ships with the package source, not on PyPI.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-regressions>=2.5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
    "types-shapely",
]

[project.urls]
Homepage = "https://github.com/random-walks/factor-factory"
Repository = "https://github.com/random-walks/factor-factory"
Issues = "https://github.com/random-walks/factor-factory/issues"

[project.scripts]
# Allow `factor-factory scaffold ...` in addition to `python -m factor_factory scaffold ...`
factor-factory = "factor_factory.__main__:main"

[tool.hatch.version]
path = "factor_factory/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["factor_factory"]
# hatchling includes non-.py data files (Jinja .j2 templates, jellycell.toml
# scaffold sources) recursively under packages = [...] — no force-include
# needed. A prior `force-include` duplicated those paths and produced a
# ZIP with duplicate local headers which PyPI rejects (see v1.0.0 release
# run 24639372057 for the historical 400 response).

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["factor_factory/tests"]
markers = [
    "property: hypothesis-backed property tests (opt-in)",
    "benchmark: pytest-benchmark performance tests (opt-in)",
    "snapshot: pytest-regressions snapshot tests (opt-in)",
]
filterwarnings = [
    "error",
    # linearmodels / lifelines / differences interplay throws a few benign deprecation noises
    "ignore::DeprecationWarning:linearmodels",
    "ignore::FutureWarning:linearmodels",
    "ignore::DeprecationWarning:lifelines",
    "ignore::FutureWarning:lifelines",
    "ignore::DeprecationWarning:differences",
    "ignore::PendingDeprecationWarning",
    # scipy 1.17 deprecated L-BFGS-B's `disp`/`iprint` options; sklearn
    # still passes them from LogisticRegression. Drop when sklearn migrates.
    "ignore:.*L-BFGS-B solver are deprecated.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "docs/og_context",
    ".venv",
    # Scaffolded notebook templates: copied verbatim into user projects.
    # They follow jellycell cell conventions (imports inside cells), not
    # standard Python module layout.
    "factor_factory/jellycell/notebooks/_templates",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
]
ignore = [
    "E501",  # line length is enforced by formatter
]

[tool.ruff.lint.per-file-ignores]
"factor_factory/tests/**" = ["B011"]  # asserts in tests are fine

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_decorators = false
files = ["factor_factory"]
exclude = ["factor_factory/tests/.*", "factor_factory/jellycell/_templates/.*"]

[[tool.mypy.overrides]]
# Optional / scientific deps without complete stubs. Only list modules
# we actually import today — v0.2+ engine PRs add their own entries.
module = [
    "linearmodels.*",
    "differences.*",
    "lifelines.*",
    "scipy.*",
    "shapely.*",
    "matplotlib.*",
    "pandas_datareader.*",
    "rdrobust.*",
    "pysyncon.*",
    "sklearn.*",
    "ruptures.*",
    "bayesloop.*",
    "sktime.*",
    "prophet.*",
    "pyfixest.*",
    "inequality.*",
    "esda.*",
    "libpysal.*",
    "spreg.*",
    "tick.*",
    "econml.*",
    "doubleml.*",
    "xclim.*",
    "pymannkendall.*",
    "ndlib.*",
    "bcf.*",
]
ignore_missing_imports = true
